# fluorostats

./: .gitignore  LICENSE  README.md  pyproject.toml
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json
examples/: multi_condition_pipeline.py
src/fluorostats/: __init__.py  cli.py  io.py  metrics_2d.py  metrics_3d.py  morphometry.py  objects.py  plots.py  power.py  preprocess.py  qc.py  render3d.py  report.py  segment.py  stats.py  style.py
tests/: test_io.py  test_metrics.py  test_morphometry.py  test_objects.py  test_plots_extensions.py  test_power.py  test_render3d.py  test_segment.py  test_stats.py  test_style.py
